src-tauri/check_output.txt
    Checking tauri-app v0.1.0 (C:\Users\charg\myWorkspace\sound-generator\src-tauri)
warning: unused imports: `CreateDIBSection`, `HBITMAP`, `RGBQUAD`, and `SelectObject`
  --> src\audio\icon.rs:11:33
   |
11 |             CreateCompatibleDC, CreateDIBSection, DeleteDC, DeleteObject, GetDC, GetDIBits,
   |                                 ^^^^^^^^^^^^^^^^
12 |             ReleaseDC, SelectObject, BITMAPINFO, BITMAPINFOHEADER, BI_RGB, DIB_RGB_COLORS, HBITMAP,
   |                        ^^^^^^^^^^^^                                                        ^^^^^^^
13 |             RGBQUAD,
   |             ^^^^^^^
   |
   = note: `#[warn(unused_imports)]` (part of `#[warn(unused)]`) on by default

error[E0308]: mismatched types
    --> src\audio\icon.rs:30:13
     |
  28 |         SHGetFileInfoW(
     |         -------------- arguments to this function are incorrect
  29 |             PCWSTR(path_wide.as_ptr()),
  30 |             0,
     |             ^ expected `FILE_FLAGS_AND_ATTRIBUTES`, found integer
     |
note: function defined here
    --> C:\Users\charg\.cargo\registry\src\index.crates.io-1949cf8c6b5b557f\windows-0.58.0\src\Windows\Win32\UI\Shell\mod.rs:3293:15
     |
3293 | pub unsafe fn SHGetFileInfoW<P0>(pszpath: P0, dwfileattributes: super::super::Storage::FileSystem::FILE_FLAGS_AND_ATTRIBUTES, psfi: Optio...
     |               ^^^^^^^^^^^^^^
help: try wrapping the expression in `windows::Win32::Storage::FileSystem::FILE_FLAGS_AND_ATTRIBUTES`
     |
  30 |             windows::Win32::Storage::FileSystem::FILE_FLAGS_AND_ATTRIBUTES(0),
     |             +++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++ +

For more information about this error, try `rustc --explain E0308`.
warning: `tauri-app` (lib) generated 1 warning
error: could not compile `tauri-app` (lib) due to 1 previous error; 1 warning emitted
